# coursera-microsoft-ml-ai

./: .gitignore  LASSO.ipynb  backward_elimination.ipynb  decision_tree.ipynb  forward_selection.ipynb  logical_regression.ipynb  main.py  pyproject.toml
ai-practitioner/: 1.Fundamentals of AI and ML.md
llm-fine-tuning/: init_demo.ipynb  init_demo.py  init_demo_improved.ipynb  init_demo_improved.py
neural_network/: mnist_simple_nn.py
reinforcement_learning/: Q-Learning_Policy-Gradient.ipynb
supervised_learning/: cross_validation.ipynb  feature_selection.ipynb
unsupervised_learning/: DBSCAN.ipynb  dimensionality_reduction.ipynb  k-means.ipynb
